<resources>
    <string name="app_name">fraction</string>

    <string name="number_zero">0</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="bracket_left">(</string>
    <string name="bracket_right">)</string>
    <string name="dot">.</string>
    <string name="backspace">⌦</string>
    <string name="multiplication">\u00D7</string>
    <string name="equal">=</string>
    <string name="minus">\u2212</string>
    <string name="plus">+</string>
    <string name="delete">C</string>
    <string name="divide">÷</string>
    <string name="plus_or_minus">\u00B1</string>
    <string name="horizontal_ellipsis">\u2026</string>
    <string name="percentage">%</string>
</resources>
